# arxiv_follow

./: .coverage  .cursor-rules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_README.md  DIDA_INTEGRATION_GUIDE.md  LICENSE_HEADER.txt  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  arxiv_daily.py  arxiv_topic.py  arxiv_weekly.py  config.py  daily_papers.py  demo_bilingual_translation.py  demo_intelligent_monitor.py  demo_search.py  dida_integration.py  follow_researchers.py  intelligent_monitor.py  paper_analyzer.py  pyproject.toml  run_tests.py  test_dida_integration.py  test_translation_service.py  topic_papers.py  translation_service.py  weekly_papers.py
.cursor/rules/: arxiv_follow_python.mdc  config_and_docs.mdc  content_handling.mdc  folder_exclusions.mdc  testing_and_ci.mdc
.github/workflows/: daily_papers.yml  release.yml  security.yml  tests.yml  topic_papers.yml  weekly_papers.yml
docs/: README.md  ci-translation-setup.md  deployment.md  dida-integration.md  intelligent-monitoring-guide.md  legacy-dida-quickstart.md  legacy-usage-guide.md  model-configuration-guide.md  topic-search.md  translation-guide.md  usage-guide.md
examples/: __init__.py  bilingual_translation.py
src/arxiv_follow/: __init__.py
src/arxiv_follow/cli/: __init__.py  daily.py  main.py  topic.py  weekly.py
src/arxiv_follow/config/: __init__.py  models.py  settings.py
src/arxiv_follow/core/: __init__.py  analyzer.py  collector.py  engine.py  monitor.py
src/arxiv_follow/integrations/: __init__.py  dida.py
src/arxiv_follow/models/: __init__.py  config.py  paper.py  researcher.py  search.py  task.py
src/arxiv_follow/services/: __init__.py  researcher.py  translation.py
tests/: __init__.py  conftest.py  test_ci.py
tests/test_config/: test_settings.py
tests/test_core/: test_analyzer.py  test_collector.py  test_intelligent_monitor.py
tests/test_integrations/: test_dida_integration.py
tests/test_services/: test_researcher_service.py  test_translation_service.py
vibe_coding/: .gitkeep  0.cursor_.md  1.cursor_arxiv_search_links_with_and_with.md  10.cursor_.md  11.fix.md  12.重构项目引入单元测试cursor_python.md  13.cursor_python.md  14.fix_ci_cursor_ci.md  15.cursor_ci.md  16.cursor_ci.md  17.cursor_discussing_issues_with_github_ac.md  18.cursor_check_ci_script_for_token_issue.md  19.cursor_.md  2.cursor_ci.md  20.cursor_.md  21.cursor_*.md  22.cursor_ci.md  23.cursor_api.md  24.cursor_api.md  25.Reorganize_the_document.md  26.cursor_outdated_usage_of_cursor_rules.md  27.cursor_.md  28.cursor_github.md  3.cursor_using_dida365_api_to_create_task.md  4.cursor_cursor.md  5.cursor_.md  6.cursor_1.md  7.cursor_.md  8.add_LLM_cursor_translate_task_information_to_bi.md  9.cursor_ai.md  README.md  fix_model.md
